--- a/MinimalMainMenu.csproj
+++ b/MinimalMainMenu.csproj
@@ -13,7 +13,7 @@
         <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
         <LangVersion>default</LangVersion>
-        <Nullable>warnings</Nullable>
+        <Nullable>disable</Nullable>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
         <PlatformTarget>AnyCPU</PlatformTarget>
@@ -66,5 +66,8 @@
     <Target Name="AfterBuild">
     </Target>
     -->
+    <PropertyGroup>
+      <PostBuildEvent>xcopy "$(TargetDir)$(ProjectName).dll" "C:\Steam\steamapps\common\Kerbal Space Program\GameData\$(ProjectName)\"  /F /R /Y /I</PostBuildEvent>
+    </PropertyGroup>
 
 </Project>
